Add unit tests and real email sending test

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,4 +1,4 @@
 from.email.address = javaEmailTestAcc@gmail.com
 from.email.password = thisisatest
-email.server.host = smtp.gmail.com
-email.server.port = 587
+email.server.host = localhost
+email.server.port = 9000
