--- a/build.gradle
+++ b/build.gradle
@@ -13,5 +13,6 @@ dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter', version: '1.4.3.RELEASE'
     compile group: 'com.sun.mail', name: 'javax.mail', version: '1.5.6'
 
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '1.4.3.RELEASE'
+    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '1.4.3.RELEASE'
+    testCompile group: 'org.subethamail', name: 'subethasmtp', version: '3.1.7'
 }
